# AgML

./: .coverage-tmp.html  .gitattributes  .gitignore  404.html  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNOTES.md  MANIFEST.in  Makefile  README.md  Synthetic data generation.ipynb  environment.yml  index.html  objects.inv  pyproject.toml  python_run.py  requirements.txt  setup.py  test2.py  testing.py  tofix.txt
.github/: release-drafter.yml  release_drafter.yml
.github/workflows/: ci.yml  docs.yml  release_draft.yml  release_drafter.yml  update-datasets.yml
.licensefoundry/: manifest.yaml
SOP/: README.md  data.md
agdata/agdata/: agdata.py  server.py
agdata/assets/: data_sources.json
agml/: CMakeLists.txt  __init__.py  framework.py  helios_config.sh  io.py
agml/_assets/: detector_benchmarks.json  iNatAg-mini_public_datasources.json  iNatAg-mini_source_citations.json  iNatAg_public_datasources.json  iNatAg_source_citations.json  model_benchmarks.json  public_datasources.json  shape_info.pickle  source_citations.json  viz_colormaps.json
agml/_helios/: CMakeLists.txt  CMakeLists.txt.orig  helios_config.sh  helios_install.sh  main.cpp
agml/_internal/: README.old.md  __init__.py  downloads.py  preprocess.py  process_utils.py  public_datasources_extra.json  publicdata.py  s3internal.py  syntheticdata.py  utils.py
agml/backend/: __init__.py  config.py  experimental.py  learn.py  random.py  tftorch.py
agml/benchmark/: __init__.py  classification.py  detection.py  model.py  models.py  segmentation.py  tools.py
agml/data/: __init__.py  builder.py  classification.py  detection.py  experimental.py  hf_loader.py  image_loader.py  loader.py  manager.py  metadata.py  multi_loader.py  multimodal.py  object.py  point_cloud.py  preprocess.py  public.py  segmentation.py  syntheticdata.py  syntheticdata.py.orig  tools.py  utils.py
agml/helios/: object_detection.ipynb
agml/models/: __init__.py  base.py  benchmarks.py  classification.py  detection.py  detector.py  losses.py  preprocessing.py  segmentation.py  system_utils.py  tools.py
agml/synthetic/: __init__.py  compilation.py  config.py  converter.py  generator.py  lidar_loader.py  manual.py  options.py  tools.py
agml/synthetic/synthetic_data_generation/: CMakeLists.txt  generate.cpp
agml/synthetic/synthetic_data_generation/SyntheticRadiation/: CMakeLists.txt  generate.cpp
agml/train/: __init__.py  coco_eval.py  datatools.py  engine.py
agml/utils/: Arrow3D.py  __init__.py  coco.py  data.py  downloads.py  general.py  image.py  io.py  logging.py  random.py
agml/viz/: __init__.py  boxes.py  display.py  general.py  imagery.py  inspection.py  instance.py  labels.py  masks.py  point_clouds.py  tools.py  utils.py
assets/: public_datasources.json
config/: coverage.ini  interrogate.toml  mkdocs.yml  mypy.ini  pytest.ini  release_draft.yml  ruff.toml
credits/: index.html
data-preprocessing/: preprocess_data.py
datasets/apple_detection_drone_brazil/: index.html
datasets/apple_detection_spain/: index.html
datasets/apple_detection_usa/: index.html
datasets/apple_flower_segmentation/: index.html
datasets/apple_segmentation_minnesota/: index.html
datasets/autonomous_greenhouse_regression/: index.html
datasets/bean_disease_uganda/: index.html
datasets/bean_synthetic_earlygrowth_aerial/: index.html
datasets/carrot_weeds_germany/: index.html
datasets/corn_maize_leaf_disease/: index.html
datasets/crop_weeds_greece/: index.html
datasets/fruit_detection_worldwide/: index.html
datasets/ghai_broccoli_detection/: index.html
datasets/ghai_green_cabbage_detection/: index.html
datasets/ghai_iceberg_lettuce_detection/: index.html
datasets/ghai_romaine_detection/: index.html
datasets/ghai_strawberry_fruit_detection/: index.html
datasets/grape_detection_californiaday/: index.html
datasets/grape_detection_californianight/: index.html
datasets/grape_detection_syntheticday/: index.html
datasets/guava_disease_pakistan/: index.html
datasets/leaf_counting_denmark/: index.html
datasets/mango_detection_australia/: index.html
datasets/peachpear_flower_segmentation/: index.html
datasets/plant_doc_classification/: index.html
datasets/plant_doc_detection/: index.html
datasets/plant_seedlings_aarhus/: index.html
datasets/plant_village_classification/: index.html
datasets/rangeland_weeds_australia/: index.html
datasets/red_grapes_and_leaves_segmentation/: index.html
datasets/rice_seedling_segmentation/: index.html
datasets/riseholme_strawberry_classification_2021/: index.html
datasets/soybean_weed_uav_brazil/: index.html
datasets/sugarbeet_weed_segmentation/: index.html
datasets/sugarcane_damage_usa/: index.html
datasets/tomato_leaf_disease/: index.html
datasets/tomato_ripeness_detection/: index.html
datasets/vegann_multicrop_presence_segmentation/: index.html
datasets/vine_virus_photo_dataset/: index.html
datasets/wheat_head_counting/: index.html
datasets/white_grapes_and_leaves_segmentation/: index.html
developement/: index.html
docs/: code_of_conduct.md  credits.md  dataset_listing.md  development.md  license.md
docs/datasets/: almond_bloom_2023.md  almond_harvest_2021.md  apple_detection_drone_brazil.md  apple_detection_spain.md  apple_detection_usa.md  apple_flower_segmentation.md  apple_segmentation_minnesota.md  arabica_coffee_leaf_disease_classification.md  banana_leaf_disease_classification.md  bean_disease_uganda.md  bean_synthetic_earlygrowth_aerial.md  betel_leaf_disease_classification.md  blackgram_plant_leaf_disease_classification.md  carrot_weeds_germany.md  (+59 more)
examples/: AgML-Detector.ipynb  AgML-Models.ipynb  AgML-Synthetic.ipynb  object_detection.ipynb
experiments/: README.md
license/: index.html
scripts/: convert_lightning_pytorch_ckpt.py  create_world_map.py  fix-opencv.sh  format_json_source.py  generate_dataset_markdown.py  generate_info  generate_normalization_info.py  generate_shape_info.py  run_full_dataset_update.py
search/: search_index.json
src/: setup.py
tests/: conftest.py  main.py  quickstart.py  test_import.py
(+116 files in other folders)
