# simplest build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "agml"
description = "A comprehensive library for agricultural deep learning"
authors = [{name = "UC Davis Plant AI and Biophysics Lab", email = "jmearles@ucdavis.edu"}]
maintainers = [{ name="Amogh Joshi", email="amnjoshi@ucdavis.edu"}]

license = {text = "Apache 2.0"}
readme = "README.md"
packages = [{include = "agml", from = "agml", exclude ='agml/_internal'}]
version = "0.7.3"
requires-python = ">=3.8,<3.12"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]



# managed by uv
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "requests>=2.0.0",
    "scikit-learn>=1.3.2",
    "tqdm>=4.67.0",
    "pyyaml>=6.0.2",
    "albumentations>=1.4.18",
    "dict2xml>=1.7.6",
]
[project.urls]


[project.scripts]



[tool.uv]
dev-dependencies = [
    "boto3>=1.35.66",
    "scikit-image>=0.21.0",
    "shapely>=2.0.6",
    "botocore>=1.35.66",
    "pandas>=2.0.3",
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "coverage>=7.6.1",
    "interrogate>=1.7.0",
]